--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">蚂蚁帮</string>
+
+
+    <string name="account_is_stop">账户已经停用，请联系管理员</string>
+    <string name="repeat_request">请重试</string>
+    <string name="repeat_again">重试</string>
+    <string name="exit_app">退出应用</string>
 </resources>
