--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="repeat_request">请重试</string>
     <string name="repeat_again">重试</string>
     <string name="exit_app">退出应用</string>
+    <string name="error_image_cut">无法获取照片</string>
 </resources>
