--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="repeat_again">重试</string>
     <string name="exit_app">退出应用</string>
     <string name="error_image_cut">无法获取照片</string>
+
+
+    <string name="umeng_socialize_text_weixin_key">微信</string>
+    <string name="umeng_socialize_text_weixin_circle_key">朋友圈</string>
 </resources>
